--- a/clone_blizzard/src/App.css
+++ b/clone_blizzard/src/App.css
@@ -1,42 +1,85 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+}
+
+body{
+  background: #1d1d1d;
+}
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration:none;
+}
+
+.home--header{
+  position: absolute;
+  display: block;
+  top: 16px;
+  left: 16px;
+  bottom: 16px;
+  right: 16px;
+  height: 72px;
+  padding-left: 12px;
+  backdrop-filter: 20px;
+  background: rgba(40,45,67,.8);
+  border-radius: 8px;
+}
+
+.home--header--dropbar{
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  height: 72px;
+}
+
+.home--header--logo{
+  max-width: 80px;
+  margin-left: 32px;
+}
+
+.home--header--dropbar > li{
+  width: auto;
+  height: 27px;
+  margin-left: 32px;
+  padding: 0;
   text-align: center;
+  background-color: #5778ff;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.home--header--dropbar > li:hover{
+  background-color: #94a9ff;
+  transition-duration: 0.2s;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home--header--dropbox{
+  position: relative;
+  overflow: hidden;
+  height: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.home--header--dropbar > li:hover .home--header--dropbox{
+  height: 250px;
+  transition-duration: 0.2s;
 }
 
-.card {
-  padding: 2em;
+.home--header--dropbox > li{
+  line-height: 50px;
+  background-color: aliceblue;
 }
 
-.read-the-docs {
-  color: #888;
+.home--header--game{
+  font-size: 20px;
+  font-weight: 550;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+}
+
+.home--header--arrow{
+  max-width: 17px;
 }
